[gd_scene load_steps=2 format=3 uid="uid://c4kulqwpmitxb"]

[ext_resource type="Script" path="res://scenes/worlds/game_over.gd" id="1_v1d2q"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1d2q")

[node name="CenterDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="CenterDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="CenterDisplay"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Score:0"

[node name="HighScoreLabel" type="Label" parent="CenterDisplay"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "High Score: 0"

[node name="BottomDisplay" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="RestartLabel" type="Label" parent="BottomDisplay"]
layout_mode = 2
size_flags_horizontal = 4
text = "Press <SPACE> or <CLICK> to try again"
